src/styles/objects/projects/_about.scss
.p-about {
    position: absolute;
    height: 100%;
    width: 100%;
    text-align: center;
}

.p-about__content {
    position: relative;
    top: 50%;
}

.p-about__title {
    font-family: "PT Mono", "Menlo", monospace;
    font-size: 1rem;
    color: hsl(0,0,100);
    background-color: hsl(0,0,30);
    text-decoration: none;

    &:before, &:after {
        letter-spacing: -0.3rem;
        content: '\00a0';
    }

    &:hover {
        color: hsl(0,0,100);
        background-color: $color-red;
    }
}

.p-about__desc {
}

